Changes between 3.2 and -next
-----------------------------
  * Add support for getting EIT present/following for chosen service in dvblastctl
  * Add support for getting EIT schedule for chosen service in dvblastctl
  * Switch default string charset to UTF-8//IGNORE

Changes between 3.1 and 3.2:
----------------------------
  * Fix HEVC support
  * Fix memory leak on loading the configuration
  * Also remap ONID in EIT
  * Fix segmentation fault when using output charset different from native
  * Use default charset ISO 6937 for ASCII strings
  * Add /charset= output option
  * Fix EIT schedule signaling in SDT

Changes between 3.0 and 3.1:
----------------------------
  * Print source address in UDP input
  * Print actual EITp/f
  * Add DVB-T2 support with multi PLP
  * Add ISDB-T support
  * Add HEVC support
  * Add ONID remapping
  * Add PCR even when PCR PID is not selected, but drop non-PCR packets
  * Extend support for uncommitted DiSEqC switches with up to 16 ports
  * Fix reload of configuration with tsid=-1

Changes between 2.2 and 3.0:
----------------------------
  * Rewrite core to use libev event loop
  * Optimize allocations with a buffer pool
  * Add support for building DVBlast on OS X
  * Add support for uncommitted diseqc switches
  * Fix ECM pid selection
  * Add CA device addressing
  * Add support for remapping ES pids to fixed values globally and per output
  * Add support for multi-delivery system frontends
  * Add support for multistream that appeared in Linux 3.6
  * Add support for Deltacast ASI cards
  * Add support for stream pass-through from the config file
  * Add options to periodically print status of bitrate, errors and PIDs
  * Add output options to set network ID and network name
  * Switch default string charset to UTF-8
  * Do not remove padding with ASI

Changes between 2.1 and 2.2:
----------------------------
  * Fix a regression that prevented ECM pass-through (-Y) from working.